--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   "volta": {
     "node": "18.17.1"
   },
-  "repository": {
-    "url": "https://github.com/roelvdwater/getting-started-example",
-    "directory": "packages/header",
-    "type": "git"
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   }
 }
