--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node": "18.17.1"
   },
   "repository": {
-    "url": "https://github.com/roelvdwater/getting-started-example",
+    "url": "git+https://github.com/roelvdwater/purchasing-react-components.git",
     "directory": "packages/header",
     "type": "git"
   }
